--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>covea.com.test</groupId>
 	<artifactId>TestMaven</artifactId>
-	<version>23.9.2-SNAPSHOT</version>
+	<version>23.9.3</version>
 	<build>
 		<plugins>
 			<plugin>
